code/app/tomcat/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: tomcat
